# MobVis

./: .gitignore  Dados.xlsx  LICENSE  MANIFEST.in  README.md  bm_swim_100.csv  mobvis_req.yml  pyproject.toml  requirements.txt  requirements.yml  setup.cfg  trace_igor.ipynb  windows_requirements.yml
mobvis/metrics/social/: ContactDuration.py  IntercontactTime.py
mobvis/metrics/spatial/: RadiusOfGyration.py  TravelDistance.py  VisitOrder.py
mobvis/metrics/temporal/: TravelTime.py  VisitTime.py
mobvis/metrics/utils/: Contacts.py  HomeLocations.py  IMetric.py  Locations.py  MetricBuilder.py  MultiMetricExtractor.py
mobvis/plots/: metric_plotter.py  multiplotter.py  spatial_plotter.py
mobvis/preprocessing/: caller.py  extractor.py  parser.py
mobvis/utils/: Converters.py  Exports.py  FileLogger.py  Timer.py  Utils.py  constants.py
