[metadata]
name = mobvis
version = 0.0.1
author = Lucas Novais da Silva
author_email = lucasnovais222@gmail.com
description = Library that receives mobility data from different sources and returns many useful charts and tabular data.
url = https://github.com/lucNovais/MobVis
classifiers = 
    Programming Language :: Python :: 3
    License :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
include_package_data = True